--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - /bin/bash
       - -c
       - |
+        poetry run python manage.py makemigrations users tracks playlists
         poetry run python manage.py migrate
         poetry run python manage.py runserver 0.0.0.0:8000
     networks:
