--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ pydantic = "1.10"
 drf-social-oauth2 = "~1.2"
 drf-yasg = "~1.21"
 django-extensions = "~3.2"
+djangorestframework-simplejwt = "^5.2.2"
+pytest = "^7.2.2"
+pytest-django = "^4.5.2"
 
 
 [build-system]
