--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ django-extensions = "~3.2"
 djangorestframework-simplejwt = "^5.2.2"
 pytest = "^7.2.2"
 pytest-django = "^4.5.2"
+django-cors-headers = "^3.14.0"
 
 
 [build-system]
